Fix post modal position when the navigation bar is open and the stream is not centred with the screen.

--- a/scss/partials/_post_modal.scss
+++ b/scss/partials/_post_modal.scss
@@ -29,20 +29,22 @@ div.post-modal-container {
 
   button.modal-close-bt {
     position: fixed;
-    // right: 736px;
     right: calc(50vw + 376px);
     top: 12px;
   }
 
   div.post-modal-wrapper {
     width: 720px;
-    position: relative;
+    position: absolute;
     top: 0;
     min-height: 100vh;
-    margin: 0 auto;
-    // right: 0;
     transition: right 180ms ease-in;
     background-color: $ultra_light_grey;
+    left: calc(#{$left_navigation_sidebar_width}px + ((100vw - #{$left_navigation_sidebar_width}px) / 2) - 360px - 16px);
+
+    &.left-navbar-hidden {
+      left: calc(50vw - 360px);
+    }
 
     div.post-modal {
       height: 100%;
